[tool.poetry]
name = "oop"
version = "0.1.0"
description = ""
authors = ["marinabrovko <marishka.brovko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest = "^8.3.2"
mock = "^5.1.0"
flake8 = "^7.1.1"
requests = "^2.32.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
